<resources>
    <string name="app_name">ZingDemoApi</string>
    <string name="name">Tên Phim</string>
    <string name="genres">Thể loại:</string>
    <string name="t_n">Tên</string>
    <string name="description">Mô tả</string>
    <string name="ink">Link:</string>
    <string name="format">Định dạng:</string>
    <string name="listen">Lượt xem:</string>
    <string name="comment">Bình luận:</string>
    <string name="rating">Đánh giá:</string>
    <string name="release_date">Thời gian ra mắt:</string>
    <string name="artist">Các diễn viên:</string>
    <string name="series">Series</string>
    <string name="xem_them">xem comment</string>
    <string name="avatar">user_avatar</string>
    <string name="title_comment_activity">Bình luận của</string>
    <string name="app_tag">ZingDemoApi</string>
    <string name="error_message">Errorss:   </string>
    <string name="comment_complete_message">Completed load comment API</string>
    <string name="programinfo_complete_message">Completed ProgramInfoActivity API</string>
    <string name="end_comment">Không còn bình luận nào khác</string>
    <string name="programinfo_service_complete_message">service api loaded completely</string>
</resources>
